<resources>
    <string name="app_name">GastoViagem</string>
    <string name="title">Custo de Viagem</string>
    <string name="placeholder_distance">Distância</string>
    <string name="label_distance">Total de quilomêtros</string>
    <string name="placeholder_price">Preço</string>
    <string name="label_price">Preço por litro</string>
    <string name="placeholder_autonomy">Autonomia</string>
    <string name="label_autonomy">KMs por litro</string>
    <string name="total_value_label">Seu gasto total será de:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">CALCULAR</string>
    <string name="invalid_inputs">Preencha corretamente todos os campos</string>
</resources>
